--- a/app/assets/stylesheets/pages/locations.scss
+++ b/app/assets/stylesheets/pages/locations.scss
@@ -2,6 +2,10 @@ body.home-locations {
   background-color: $color-tertiary;
 }
 
+.tabs-underlined .tab-underlined {
+  color: $color-secondary;
+}
+
 .home-locations {
   box-sizing: border-box;
   color: $color-secondary;
