--- a/app/assets/stylesheets/pages/start.scss
+++ b/app/assets/stylesheets/pages/start.scss
@@ -2,3 +2,7 @@ body.home-start {
   background-color: $color-primary;
   color: $color-secondary;
 }
+
+.tabs-underlined .tab-underlined {
+  color: $color-secondary;
+}
