--- a/app/views/home/details.html.erb
+++ b/app/views/home/details.html.erb
@@ -1,1 +1,8 @@
-details.html.erb
+<div class="home-details">
+  <div class="">
+    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
+
+    <%= image_tag "details.png", class: "details-img", alt: "details" %>
+
+  </div>
+</div>
