--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,11 @@
 <!-- app/views/home/index.html.erb -->
-
-<div class="content">
-  <div class="coming-soon">coming soon...</div>
-  <div class="event-details">
-    <div class="names"><span>D</span>ANIELA & <span>J</span>ACOB</div>
-    <div class="date">12. Oktober 2024</div>
-    <div class="location">Südtirol</div>
+<div class="home-index">
+  <div class="content-home">
+    <div class="coming-soon">coming soon...</div>
+    <div class="event-details">
+      <div class="names"><span>D</span>ANIELA & <span>J</span>ACOB</div>
+      <div class="date">12. Oktober 2024</div>
+      <div class="location">Südtirol</div>
+    </div>
   </div>
 </div>
