--- a/app/views/home/infos.html.erb
+++ b/app/views/home/infos.html.erb
@@ -1,8 +1,9 @@
-<body class="home-infos">
-  <div class="infos-content">
-  <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
+<div class="home-infos">
+  <div class="content">
+    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
+
     <section>
-      <h1>A n r e i s e</h1>
+      <h1>Anreise</h1>
       <p>Falls ihr nicht mit dem Auto oder mit dem Zug anreist, gibt es Direktflüge mit der Airline Skyalps von Hamburg, Berlin, Düsseldorf und Kassel direkt nach Bozen:</p>
       <br>
       <a href="https://www.skyalps.com/de/" target="_blank">https://www.skyalps.com/de/</a>
@@ -21,7 +22,7 @@
     </section>
 
     <section>
-      <h1>U n t e r k ü n f t e</h1>
+      <h1>Unterkünfte</h1>
       <h2>Eppan</h2>
       <p><a href="http://www.hotel-schloss-korb.com" target="_blank">Hotel Schloss Korb</a></p>
       <p><a href="http://www.christof.it" target="_blank">Hotel Christof</a></p>
@@ -39,28 +40,28 @@
     </section>
 
     <section>
-      <h1>S h u t t l e</h1>
+      <h1>Shuttle</h1>
     </section>
 
     <section>
-      <h1>K i n d e r</h1>
+      <h1>Kinder</h1>
       <p>Wir freuen uns über das Kommen Eurer Kinder am Samstag in die Kirche und zum Empfang! Am Freitag- und Samstagabend wird ein Raum im Ansitz Zinnenberg & Schloss Freudenstein für die Babys & Kinderwagen mit Betreuung zur Verfügung gestellt werden.</p>
     </section>
 
     <section>
-      <h1>R e d e n & B e i t r ä g e</h1>
+      <h1>Reden & Beiträge</h1>
       <p>Für eventuelle Reden & Beiträge meldet Euch bitte bei:</p>
       <p>Nikola Hertel<br>+49 17630464353<br><a href="mailto:nikolahertel@outlook.de">nikolahertel@outlook.de</a></p>
     </section>
 
     <section>
-      <h1>G e s c h e n k e t i s c h</h1>
+      <h1>Geschenketisch</h1>
       <p>Euer Kommen ist unser größtes Geschenk. Solltet Ihr uns darüber hinaus eine Freude machen wollen, haben wir unter folgendem Link einen Hochzeitstisch zusammengestellt:</p>
-      <p><a href="http://www.danielajacob.de" target="_blank">www.danielajacob.de</a></p>
+      <a href="http://www.danielajacob.de" target="_blank">www.danielajacob.de</a>
     </section>
 
     <section>
-      <h1>K o n t a k t e</h1>
+      <h1>Kontakte</h1>
       <p>Sabine und Hubertus Luckner, Klosterhof 1, 25436 Uetersen</p>
       <p>Martina Hoyer-Hertel, Straßweg 24, 22607 Hamburg</p>
       <p>Peter Hertel, Elbchaussee 197, 22605 Hamburg</p>
@@ -75,4 +76,4 @@
       <p>Jacob Bülow +49 1703444606; Robert Mangin +49 15142510654</p>
     </section>
   </div>
-</body>
+</div>
