--- a/app/views/home/locations.html.erb
+++ b/app/views/home/locations.html.erb
@@ -1,39 +1,41 @@
 <div class="home-locations">
-  <section class="image-location">
-    <img src="<%= asset_path('locations.png') %>" alt="locations map">
-  </section>
+  <div class="content">
+    <section class="image-location">
+      <img src="<%= asset_path('locations.png') %>" alt="locations map">
+    </section>
 
-  <section>
-    <h2>Ansitz Zinnenberg</h2>
-    <p>St. Justina Straße 65, 39050 Eppan / Südtirol</p>
-    <a href="https://maps.app.goo.gl/FSDNUXBeWtv8QP737">maps</a>
-  </section>
+    <section>
+      <h2>Ansitz Zinnenberg</h2>
+      <p>St. Justina Straße 65, 39050 Eppan / Südtirol</p>
+      <a href="https://maps.app.goo.gl/FSDNUXBeWtv8QP737">maps</a>
+    </section>
 
-  <section>
-    <h2>Schloss Freudenstein</h2>
-    <p>Matschatscher Weg 6, 39050 Eppan / Südtirol</p>
-    <a href="https://maps.app.goo.gl/8WkbUMLqodmgh9TC9">maps</a>
-  </section>
+    <section>
+      <h2>Schloss Freudenstein</h2>
+      <p>Matschatscher Weg 6, 39050 Eppan / Südtirol</p>
+      <a href="https://maps.app.goo.gl/8WkbUMLqodmgh9TC9">maps</a>
+    </section>
 
-  <section>
-    <h2>Pfarrkirche Maria Himmelfahrt</h2>
-    <p>Marktplatz 1, 39052 Kaltern / Südtirol</p>
-    <a href="https://maps.app.goo.gl/mFKBXXaSiQXz3qRf6">maps</a>
-  </section>
+    <section>
+      <h2>Pfarrkirche Maria Himmelfahrt</h2>
+      <p>Marktplatz 1, 39052 Kaltern / Südtirol</p>
+      <a href="https://maps.app.goo.gl/mFKBXXaSiQXz3qRf6">maps</a>
+    </section>
 
-  <section>
-    <h2>Ansitz Windegg</h2>
-    <p>Windegg 3, 39052 Kaltern / Südtirol</p>
-    <a href="https://maps.app.goo.gl/PG4CrQQKwpFGEprV6">maps</a>
-  </section>
+    <section>
+      <h2>Ansitz Windegg</h2>
+      <p>Windegg 3, 39052 Kaltern / Südtirol</p>
+      <a href="https://maps.app.goo.gl/PG4CrQQKwpFGEprV6">maps</a>
+    </section>
 
-  <section class="image-location">
-    <img src="<%= asset_path('locations.png') %>" alt="locations map">
-  </section>
+    <section class="image-location">
+      <img src="<%= asset_path('locations.png') %>" alt="locations map">
+    </section>
 
-  <section>
-    <h2>Parkplatz Trutsch</h2>
-    <p>Trucci, 39052 Kaltern / Südtirol</p>
-    <a href="https://maps.app.goo.gl/xvJro1LZ1MRW5bRV7">maps</a>
-  </section>
+    <section>
+      <h2>Parkplatz Trutsch</h2>
+      <p>Trucci, 39052 Kaltern / Südtirol</p>
+      <a href="https://maps.app.goo.gl/xvJro1LZ1MRW5bRV7">maps</a>
+    </section>
+  </div>
 </div>
