--- a/app/views/home/rsvp.html.erb
+++ b/app/views/home/rsvp.html.erb
@@ -1,5 +1,5 @@
 <div class="home-rsvp">
-  <div class="rsvp-content">
+  <div class="content">
     <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
     <section>
       <h1>RSVP</h1>
