--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -7,7 +7,8 @@
   align-items: center;
   padding: 10px 0;
   z-index: 10;
-  font-style: italic; /* Kursivschrift */
+  font-style: italic;
+  font-family: 'Garamond', serif;
 }
 
 .tabs-underlined .tab-underlined {
