--- a/app/views/home/start.html.erb
+++ b/app/views/home/start.html.erb
@@ -1,13 +1,13 @@
-<!-- app/views/home/intro.html.erb -->
 <div class="home-start">
   <div class="content">
     <section>
-      <h1>Ihr Lieben</h1>
-      <p>Wir freuen uns so sehr über Euer Kommen und mit Euch unsere Hochzeit zu feiern!
-        Bitte meldet Euch jederzeit bei uns, wenn Ihr Fragen habt.
-        Pfiat di und bis bald!
-        Dani & Jacob
-      </p>
+    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
+
+      <h1>Ihr Lieben,</h1>
+      <p>Wir freuen uns so sehr über Euer Kommen und mit Euch unsere Hochzeit zu feiern!</p>
+        <p>Bitte meldet Euch jederzeit bei uns, wenn Ihr Fragen habt.</p>
+        <p>Pfiat di und bis bald!</p>
+        <p>Dani & Jacob</p>
     </section>
   </div>
 </div>
