--- a/app/views/home/infos.html.erb
+++ b/app/views/home/infos.html.erb
@@ -5,21 +5,20 @@
     <section>
       <h1>Anreise</h1>
       <p>Falls ihr nicht mit dem Auto oder mit dem Zug anreist, gibt es Direktflüge mit der Airline Skyalps von Hamburg, Berlin, Düsseldorf und Kassel direkt nach Bozen:</p>
-      <br>
       <a href="https://www.skyalps.com/de/" target="_blank">https://www.skyalps.com/de/</a>
       <br>
       <p>Entfernung mit dem Taxi/Auto vom Flughafen Bozen zum Ansitz Zinnenberg & Schloss Freudenstein: 12 km; 20 Minuten.</p>
-      <br>
       <p>Weitere Flughäfen in der Umgebung:
         <br>Innsbruck (135 km; 2 Std.)
         <br>Verona (160 km; 1,5 - 2 Std.)
         <br>München (320 km; 3,5 Std.)
       </p>
-      <br>
       <p>Bahnhof:
         <br>Bozen (14 km; 20 Minuten)
       </p>
     </section>
+
+    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
 
     <section>
       <h1>Unterkünfte</h1>
@@ -38,42 +37,51 @@
       <h2>Kaltern</h2>
       <p><a href="http://www.weisses-rössl-kaltern.com"target="_blank">Weißes Rössl</a></p>
     </section>
+    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
 
     <section>
       <h1>Shuttle</h1>
     </section>
+    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
 
     <section>
       <h1>Kinder</h1>
       <p>Wir freuen uns über das Kommen Eurer Kinder am Samstag in die Kirche und zum Empfang! Am Freitag- und Samstagabend wird ein Raum im Ansitz Zinnenberg & Schloss Freudenstein für die Babys & Kinderwagen mit Betreuung zur Verfügung gestellt werden.</p>
     </section>
+    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
 
     <section>
       <h1>Reden & Beiträge</h1>
       <p>Für eventuelle Reden & Beiträge meldet Euch bitte bei:</p>
       <p>Nikola Hertel<br>+49 17630464353<br><a href="mailto:nikolahertel@outlook.de">nikolahertel@outlook.de</a></p>
     </section>
+    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
 
     <section>
       <h1>Geschenketisch</h1>
-      <p>Euer Kommen ist unser größtes Geschenk. Solltet Ihr uns darüber hinaus eine Freude machen wollen, haben wir unter folgendem Link einen Hochzeitstisch zusammengestellt:</p>
+      <p>Euer Kommen ist unser größtes Geschenk.
+        <br>Solltet Ihr uns darüber hinaus eine Freude machen wollen, haben wir unter folgendem Link einen Hochzeitstisch zusammengestellt:</p>
       <a href="http://www.danielajacob.de" target="_blank">www.danielajacob.de</a>
     </section>
 
+    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
+
     <section>
       <h1>Kontakte</h1>
-      <p>Sabine und Hubertus Luckner, Klosterhof 1, 25436 Uetersen</p>
-      <p>Martina Hoyer-Hertel, Straßweg 24, 22607 Hamburg</p>
-      <p>Peter Hertel, Elbchaussee 197, 22605 Hamburg</p>
+      <p>Sabine und Hubertus Luckner, Klosterhof 1, 25436 Uetersen
+        <br>Martina Hoyer-Hertel, Straßweg 24, 22607 Hamburg
+        <br>Peter Hertel, Elbchaussee 197, 22605 Hamburg
+      </p>
       <br>
+      <p>Daniela und Jacob Luckner, Danziger Straße 57, 10435 Berlin
+        <br>Daniela +49 17680636231; Jacob +49 1741969090
+      </p>
       <br>
-      <p>Daniela und Jacob Luckner, Danziger Straße 57, 10435 Berlin<br>Daniela +49 17680636231; Jacob +49 1741969090</p>
-      <br>
-      <br>
-      <p>Josefine Theden-Schow +49 1739212080; Josephine Stolberg +49 16093911444;</p>
-      <p>Nikola Hertel +49 17630464353; Pauline Dill +49 17631233737</p>
-      <p>Georg Oldenburg +49 17626110600; Jakob Below +49 15735805059</p>
-      <p>Jacob Bülow +49 1703444606; Robert Mangin +49 15142510654</p>
+      <p>Josefine Theden-Schow +49 1739212080; Josephine Stolberg +49 16093911444;
+        <br>Nikola Hertel +49 17630464353; Pauline Dill +49 17631233737
+        <br>Georg Oldenburg +49 17626110600; Jakob Below +49 15735805059
+        <br>Jacob Bülow +49 1703444606; Robert Mangin +49 15142510654
+      </p>
     </section>
   </div>
 </div>
