--- a/app/views/home/locations.html.erb
+++ b/app/views/home/locations.html.erb
@@ -1,8 +1,6 @@
 <div class="home-locations">
   <div class="content">
-    <section class="image-location">
-      <img src="<%= asset_path('locations.png') %>" alt="locations map">
-    </section>
+      <%= image_tag "locations.png", class: "location-img", alt: "locations map" %>
 
     <section>
       <h2>Ansitz Zinnenberg</h2>
@@ -28,9 +26,8 @@
       <a href="https://maps.app.goo.gl/PG4CrQQKwpFGEprV6">maps</a>
     </section>
 
-    <section class="image-location">
-      <img src="<%= asset_path('locations.png') %>" alt="locations map">
-    </section>
+    <%= image_tag "locations.png", class: "location-img", alt: "locations map" %>
+
 
     <section>
       <h2>Parkplatz Trutsch</h2>
