--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -1,33 +1,34 @@
 .tabs-underlined {
   position: fixed;
   top: 1rem;
-  width: 85%;
+  width: 85vw;
   display: flex;
-  justify-content: space-around;
   align-items: center;
-  padding: 10px 0;
-  z-index: 10;
+  justify-content: space-around;
+  padding-top: 10px;
   font-style: italic;
   font-family: 'Garamond', serif;
 }
 
 .tabs-underlined .tab-underlined {
-  color: $color-primary;
+  color: $color-secondary;
   padding: 8px;
   margin: 0 16px;
   cursor: pointer;
   text-decoration: none;
-  border-bottom: 4px solid transparent;
+  opacity: .4;
+  border-bottom: 1px solid transparent;
   position: relative;
 }
 
 .tabs-underlined .tab-underlined.active {
   opacity: 1;
-  border-bottom: 3px solid $color-secondary;
+  border-bottom: 1px solid $color-secondary;
 }
 
 .tabs-underlined a:hover {
   color: #b1804d;
+  border-bottom: 1px solid $color-secondary;
 }
 
 .dropdown-content {
