--- a/app/assets/stylesheets/pages/details.scss
+++ b/app/assets/stylesheets/pages/details.scss
@@ -1,10 +1,15 @@
 body.home-details {
   background-color: $color-secondary;
   color: $color-primary;
-}
 
-.tabs-underlined .tab-underlined {
-  color: $color-primary;
+  .tabs-underlined .tab-underlined {
+    color: $color-primary;
+  }
+
+  .tabs-underlined a:hover {
+  color: #b1804d;
+  border-bottom: 1px solid $color-primary;
+}
 }
 
 .details-img {
