--- a/app/assets/stylesheets/pages/rsvp.scss
+++ b/app/assets/stylesheets/pages/rsvp.scss
@@ -1,36 +1,7 @@
 body.home-rsvp {
   background-color: $color-quaternary;
-}
 
-.home-rsvp {
-  box-sizing: border-box;
-  width: 60%;
-  text-align: center;
-  line-height: 1.6;
-  padding: 20px;
-
-  .rsvp-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  section {
-    margin-bottom: 5rem;
-  }
-
-  h1 {
-    font-size: 1.5rem;
-    text-decoration: underline;
-    margin-bottom: 1rem;
-  }
-
-  p {
-    font-size: 1rem;
-    margin: 5px 0;
-  }
-
-  ul {
+  .content ul {
     list-style: none;
     padding: 0;
     margin: 0;
@@ -41,15 +12,19 @@ body.home-rsvp {
     }
   }
 
-  a {
-    font-size: 1rem;
+  .tabs-underlined .tab-underlined {
     color: $color-primary;
-    text-decoration: none;
-    font-style: italic;
-
-    &:hover {
-      text-decoration: underline;
-    }
   }
+
+  .tabs-underlined a:hover {
+  color: #b1804d;
+  border-bottom: 1px solid $color-primary;
 }
+}
+
+.contact {
+  font-style: italic;
+  font-family: 'Garamond', serif;
+}
+
 
