--- a/app/views/home/infos.html.erb
+++ b/app/views/home/infos.html.erb
@@ -1,6 +1,6 @@
 <div class="home-infos">
   <div class="content">
-    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
+    <%= image_tag "Weintraube_braun.png", class: "avatar", alt: "weintraube" %>
 
     <section>
       <h1>Anreise</h1>
@@ -18,7 +18,7 @@
       </p>
     </section>
 
-    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
+    <%= image_tag "Weintraube_braun.png", class: "avatar", alt: "weintraube" %>
 
     <section>
       <h1>Unterkünfte</h1>
@@ -37,25 +37,25 @@
       <h2>Kaltern</h2>
       <p><a href="http://www.weisses-rössl-kaltern.com"target="_blank">Weißes Rössl</a></p>
     </section>
-    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
+    <%= image_tag "Weintraube_braun.png", class: "avatar", alt: "weintraube" %>
 
     <section>
       <h1>Shuttle</h1>
     </section>
-    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
+    <%= image_tag "Weintraube_braun.png", class: "avatar", alt: "weintraube" %>
 
     <section>
       <h1>Kinder</h1>
       <p>Wir freuen uns über das Kommen Eurer Kinder am Samstag in die Kirche und zum Empfang! Am Freitag- und Samstagabend wird ein Raum im Ansitz Zinnenberg & Schloss Freudenstein für die Babys & Kinderwagen mit Betreuung zur Verfügung gestellt werden.</p>
     </section>
-    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
+    <%= image_tag "Weintraube_braun.png", class: "avatar", alt: "weintraube" %>
 
     <section>
       <h1>Reden & Beiträge</h1>
       <p>Für eventuelle Reden & Beiträge meldet Euch bitte bei:</p>
       <p>Nikola Hertel<br>+49 17630464353<br><a href="mailto:nikolahertel@outlook.de">nikolahertel@outlook.de</a></p>
     </section>
-    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
+    <%= image_tag "Weintraube_braun.png", class: "avatar", alt: "weintraube" %>
 
     <section>
       <h1>Geschenketisch</h1>
@@ -64,7 +64,7 @@
       <a href="http://www.danielajacob.de" target="_blank">www.danielajacob.de</a>
     </section>
 
-    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
+    <%= image_tag "Weintraube_braun.png", class: "avatar", alt: "weintraube" %>
 
     <section>
       <h1>Kontakte</h1>
