--- a/app/assets/stylesheets/pages/details.scss
+++ b/app/assets/stylesheets/pages/details.scss
@@ -1,6 +1,7 @@
 body.home-details {
   background-color: $color-secondary;
   color: $color-primary;
+  padding-top: 5vh;
 
   .tabs-underlined .tab-underlined {
     color: $color-primary;
@@ -13,6 +14,7 @@ body.home-details {
 }
 
 .details-img {
+  padding-top: 5vh;
   display: flex;
   justify-content: center;
   align-items: center;
