--- a/app/views/home/rsvp.html.erb
+++ b/app/views/home/rsvp.html.erb
@@ -1,6 +1,6 @@
 <div class="home-rsvp">
   <div class="content">
-    <%= image_tag "Weintraube.png", class: "avatar", alt: "weintraube" %>
+    <%= image_tag "Weintraube_braun.png", class: "avatar", alt: "weintraube" %>
     <section>
       <h1>RSVP</h1>
       <p>Um Antwort wird gebeten bis zum 24. August 2024 an:</p>
