--- a/app/views/home/rsvp.html.erb
+++ b/app/views/home/rsvp.html.erb
@@ -5,13 +5,12 @@
       <h1>RSVP</h1>
       <p>Um Antwort wird gebeten bis zum 24. August 2024 an:</p>
       <p><a href="mailto:danielaundjacob@gmail.com">danielaundjacob@gmail.com</a></p>
-      <p>Bitte teilt uns folgende Informationen mit:</p>
-      <ul class="rsvp-list">
-        <li>* Zu- oder Absage</li>
-        <li>* Anzahl Kinder</li>
-        <li>* Unterkunft</li>
-        <li>* Vegan/ Vegetarisch</li>
-      </ul>
+      <p>Bitte teilt uns folgende Informationen mit:
+        <br>* Zu- oder Absage
+        <br> Anzahl Kinder
+        <br>* Unterkunft
+        <br>* Vegan/ Vegetarisch
+      </p>
       <p>Bei weiteren Fragen meldet Euch gerne telefonisch bei uns:</p>
       <p class="contact">Dani: +49 17680636231<br>Jacob: +49 1741969090</p>
     </section>
