--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,3 +1,4 @@
+<div class="mobile-menu-icon" onclick="toggleMenu()">☰</div>
 <ul class="tabs-underlined list-inline">
   <li>
     <%= link_to "start", start_path, class: active_class?(start_path) %>
@@ -8,27 +9,24 @@
   <li>
     <%= link_to "locations", locations_path, class: active_class?(locations_path) %>
   </li>
-  <li class="dropdown">
+  <li>
     <%= link_to "infos", infos_path, class: active_class?(infos_path) %>
-    <ul class="dropdown-content">
-      <li><%= link_to "anreise", anreise_path %></li>
-      <li><%= link_to "unterkünfte", unterkuenfte_path %></li>
-      <li><%= link_to "shuttle", shuttle_path %></li>
-      <li><%= link_to "kinder", kinder_path %></li>
-      <li><%= link_to "reden & beiträge", reden_beitraege_path %></li>
-      <li><%= link_to "geschenketisch", geschenketisch_path %></li>
-      <li><%= link_to "kontakte", kontakte_path %></li>
-    </ul>
   </li>
   <li>
     <%= link_to "rsvp", rsvp_path, class: active_class?(rsvp_path) %>
   </li>
-  <li class="dropdown">
+  <li>
     <%= link_to "südtirol-highlights", suedtirol_highlights_path, class: active_class?(suedtirol_highlights_path) %>
-    <ul class="dropdown-content">
-      <li><%= link_to "tagesausflüge entlang der weinstraße", tagesausfluege_weinstrasse_path %></li>
-      <li><%= link_to "unsere 3 highlights", unsere_highlights_path %></li>
-      <li><%= link_to "tolle unterkünfte", tolle_unterkuenfte_path %></li>
-    </ul>
   </li>
 </ul>
+
+<!-- JavaScript Function to Toggle Menu -->
+<script>
+  function toggleMenu() {
+    var menu = document.querySelector('.tabs-underlined');
+    menu.classList.toggle('active');
+  }
+</script>
+
+
+
