--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -17,8 +17,8 @@
   cursor: pointer;
   text-decoration: none;
   opacity: .4;
-  border-bottom: 1px solid transparent;
-  position: relative;
+  // border-bottom: 1px solid transparent;
+  // position: relative;
 }
 
 .tabs-underlined .tab-underlined.active {
@@ -27,44 +27,8 @@
 }
 
 .tabs-underlined a:hover {
-  color: #b1804d;
   border-bottom: 1px solid $color-secondary;
 }
-
-// .dropdown-content {
-//   display: none;
-//   position: absolute;
-//   background-color: white; /* Hintergrundfarbe für das Dropdown */
-//   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-//   z-index: 1;
-//   min-width: 160px;
-//   top: 100%;
-//   left: 0;
-//   list-style: none;
-//   padding: 0;
-//   margin: 0;
-// }
-
-// .dropdown-content li {
-//   padding: 0;
-//   margin: 0;
-// }
-
-// .dropdown-content a {
-//   color: $color-primary;
-//   padding: 12px 16px;
-//   text-decoration: none;
-//   display: block;
-//   text-align: left;
-// }
-
-// .tab-underlined:hover .dropdown-content {
-//   display: block;
-// }
-
-// .tab-underlined:hover {
-//   border-bottom: 3px solid $color-secondary;
-// }
 
 /* Entfernen der Aufzählungspunkte und horizontale Anordnung */
 .list-inline {
@@ -110,7 +74,6 @@
     display: block;
     width: 100%;
     padding: 12px;
-    border-bottom: 1px solid $color-secondary;
   }
 
   .dropdown-content {
