--- a/app/assets/stylesheets/pages/rsvp.scss
+++ b/app/assets/stylesheets/pages/rsvp.scss
@@ -5,9 +5,12 @@ body.home-rsvp {
     color: $color-primary;
   }
 
+  .tabs-underlined .tab-underlined.active {
+  border-bottom: 1px solid $color-primary;
+  }
+
   .tabs-underlined a:hover {
-    color: #b1804d;
-    border-bottom: 1px solid $color-primary;
+  border-bottom: 1px solid $color-primary;
   }
 }
 
