--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -4,6 +4,18 @@ body.home-index {
   background-attachment: scroll;
   align-items: flex-start;
   min-height: 200vh;
+
+ .tabs-underlined .tab-underlined {
+    color: $color-primary;
+  }
+
+  .tabs-underlined .tab-underlined.active {
+  border-bottom: 1px solid $color-primary;
+  }
+
+  .tabs-underlined a:hover {
+  border-bottom: 1px solid $color-primary;
+  }
 }
 
 @media (max-width: 768px) {
